@@ -2,46 +2,47 @@
 /* { dg-do run { target native } } */
 
 #include <stdlib.h>
+#include <stdio.h>
 
 int a;
 
-void foo()
+void
+foo ()
 {
-  a = 123;						  /* count(1) */
+  fprintf (stderr, "In foo\n");
+  a = 123; /* count(1) */
 }
 
-#include <iostream>
 using namespace std;
-class Test {
+class Test
+{
 public:
-	Test(void){
-	cout<< "In Test ctor" << endl;			  /* count(1) */
-	}
-	~Test(void){
-	cout<< "In Test dtor" << endl;			  /* count(1) */
-	}
-}T1;
+  Test (void) { fprintf (stderr, "In Test::Test\n"); /* count(1) */ }
+  ~Test (void) { fprintf (stderr, "In Test::~Test\n"); /* count(1) */ }
+} T1;
 
-void uncalled(void){
-	cout<< "In uncalled" << endl;			  /* count(#####) */
-}
-int main(void){
-atexit (&foo);
-// Test T2;
-cout<< "In main" << endl;				  /* count(1) */
-return 0;
+void
+uncalled (void)
+{
+  fprintf (stderr, "In uncalled\n"); /* count(#####) */
 }
 
-#include <stdio.h>
-
-__attribute__((constructor))
-static void construct_navigationBarImages() {
-  fprintf (stderr,  "((construct_navigationBarImages))"); /* count(1) */
+int
+main (void)
+{
+  atexit (&foo);
+  fprintf (stderr, "In main\n"); /* count(1) */
+  return 0;
 }
 
-__attribute__((destructor))
-static void destroy_navigationBarImages() {
-  fprintf (stderr,  "((destroy_navigationBarImages))");	  /* count(1) */
+static void __attribute__ ((constructor)) ctor_default ()
+{
+  fprintf (stderr, "in constructor(())\n"); /* count(1) */
+}
+
+static void __attribute__ ((destructor)) dtor_default ()
+{
+  fprintf (stderr, "in destructor(())\n"); /* count(1) */
 }
 
 /* { dg-final { run-gcov branches { -b pr16855.C } } } */
